# athanor-release-sync

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_live_real.py
config/: demo.yaml  local.yaml  test.yaml
docs/: Atanor_Project_Results.pptx  architecture.md  demo.md  evaluation.md  mcp.md  security.md  testing.md
evaluation/: __init__.py  __main__.py
examples/: calendar_alpha.csv  calendar_alpha_10.ics  calendar_alpha_outlook.csv
mcp/: _backends.py  _base.py  calendar_mail.py  confluence.py  mcp_config.json  serve_all.py  smoke_test.py  tracker_repo.py  transcripts.py
memory/: feedback.jsonl
results/: atlassian_seeded_keys.json  audit_and_coverage.md  basket_seeded.json  before_after.csv  bitbucket_seeded.json  compare_v1_v2.json  confluence_seeded.json  demo_scenario.md  error_catalog.csv  evaluation_report.html  jira_extra_seeded.json  kan_video_seeded.json  live_llm_report.md  metrics.csv  metrics.json  more_seeded.json  presentation_data.json  results_summary.md  sanitization_report.md  scenario_results.csv
scripts/: _bootstrap.py  export_results.py  gen_basket.py  gen_expected.py  gen_reports.py  gen_scenarios_extra.py  run_demo.py  run_evaluation.py  run_reproducibility.py  run_tests.py  sanitize_check.py
test-instances/: README.md  bitbucket_server.py  confluence_server.py  discover_atlassian.py  gen_live_case.py  graph_server.py  jira_server.py  ms_auth.py  rename_to_pprb.py  rename_to_pprb2.py  seed_atlassian.py  seed_basket.py  seed_bitbucket.py  seed_confluence.py  seed_extra_jira.py  (+6 more)
(+1123 files in other folders)
